fix: modify project links by using ids instead of hard-coded links & less letter spacing for h3 and h4 elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 
   h3,
   h4 {
-    @apply leading-[1.3em];
+    @apply leading-[1.3em] tracking-tight;
   }
 
   p {
